first pass at adding support for optional runId field
